tests/typechecker/should_pass/duplicate_assertions.csp
assert STOP [T= STOP
assert STOP [T= STOP