tests/typechecker/should_fail/symmetry1.csp
datatype T = T1 | T2
Node = T

assert STOP :[symmetric]: Node
